--- a/includes/docs/html/content.html
+++ b/includes/docs/html/content.html
@@ -34,7 +34,8 @@ You can display custom fields as well as predefined fields:
 		<li><i>edit-url</i> - post edit URL</li>
 	</ul><ul>
 		<li><i>title</i> - post title</li>
-		<li><i>title-link</i> - post title with link to the post</li>
+    <li><i>title-link</i> - post title with link to the post</li>
+    <li><i>title-link-out</i> - post title with link to the post, in new tab: <i>target="_blank"</i></li>
 		<li><i>excerpt</i> - post excerpt</li>
 	</ul><ul>
 		<li><i>date</i> - published date</li>
@@ -42,7 +43,8 @@ You can display custom fields as well as predefined fields:
 	</ul><ul>
 		<li><i>image</i> - featured image</li>
 		<li><i>image-url</i> - featured image URL</li>
-		<li><i>image-link</i> - featured image with link to the post</li>
+    <li><i>image-link</i> - featured image with link to the post</li>
+    <li><i>image-link-out</i> - featured image with link to the post, in new tab: <i>target="_blank"</i></li>
 	</ul><ul>
 		<li><i>thumbnail</i> - featured image thumbnail</li>
 		<li><i>thumbnail-link</i> - featured image thumbnail with link to the post</li>
