--- a/includes/docs/html/welcome.html
+++ b/includes/docs/html/welcome.html
@@ -19,6 +19,7 @@
 	<li><a href="options-general.php?page=ccs_reference&tab=load">Load</a> HTML/CSS/PHP/JavaScript files</li>
 	<li><a href="options-general.php?page=ccs_reference&tab=other">Relative URLs</a> for links and images</li>
 	<li><a href="options-general.php?page=ccs_reference&tab=cache">Cache</a> the result of query loops</li>
+  <li><a href="options-general.php?page=ccs_reference&tab=mobile">Mobile detect</a> shortcodes</li>
 </ul>
 <h4>Support for other plugins</h4>
 <ul>
