--- a/includes/docs/html/content.html
+++ b/includes/docs/html/content.html
@@ -83,8 +83,9 @@ You can display custom fields as well as predefined fields:
 	<li><b>size</b> - size of image: <i>thumbnail</i>, <i>medium</i>, <i>large</i>, <i>full</i> (default) or <a target="_blank" href="http://codex.wordpress.org/Function_Reference/add_image_size">custom defined size</a></li>
 	<li><b>width</b>, <b>height</b> - set both to resize image by pixels; set <i>size</i> parameter with same proportion</li>
 	<li><b>image_class</b> - add class to the &lt;img&gt; tag</li>
-	<li><b>alt</b>, <b>title</b> - additional &lt;img&gt; attributes</li>
+  <li><b>alt</b>, <b>title</b> - additional &lt;img&gt; attributes</li>
 	<li><b>in</b> - type of image field: <i>id</i> (default), <i>url</i>, or <i>object</i></li>
+  <li><b>nopin</b> - set <i>nopin="nopin"</i> to prevent Pinterest pinning of image</li>
 </ul>
 
 <h4>Taxonomy</h4>
