--- a/includes/docs/html/content.html
+++ b/includes/docs/html/content.html
@@ -43,8 +43,13 @@ You can display custom fields as well as predefined fields:
 	</ul><ul>
 		<li><i>image</i> - featured image</li>
 		<li><i>image-url</i> - featured image URL</li>
+    <li><i>image-title</i> - featured image title</li>
+    <li><i>image-caption</i> - featured image caption</li>
+    <li><i>image-alt</i> - featured image alternate text</li>
+    <li><i>image-description</i> - featured image description</li>
     <li><i>image-link</i> - featured image with link to the post</li>
     <li><i>image-link-out</i> - featured image with link to the post, in new tab: <i>target="_blank"</i></li>
+
 	</ul><ul>
 		<li><i>thumbnail</i> - featured image thumbnail</li>
 		<li><i>thumbnail-link</i> - featured image thumbnail with link to the post</li>
