--- a/includes/docs/html/content.html
+++ b/includes/docs/html/content.html
@@ -67,6 +67,7 @@ You can display custom fields as well as predefined fields:
 	<li><b>words</b> or <b>length</b> - limit output by number of words or characters</li>
 	<li><b>class</b> - add &lt;div&gt; class to the output</li>
 	<li><b>format</b> - add paragraph tags &lt;p&gt; and preserve line breaks &lt;br&gt; - set to <i>true</i>/<i>false</i> - by default, post content is formatted and for all other fields, it's set to <i>false</i></li>
+  <li><b>filter</b> - set <i>true</i> to apply <i>the_content</i> filter; this might be useful when using plugins that filter the post content, for example, <a href="https://wordpress.org/plugins/siteorigin-panels/" target="_blank">Page Builder</a></li>
 	<li><b>embed</b> - auto-embed URLs like YouTube, Vimeo, etc - set to <i>true</i>/<i>false</i> - by default, such URLs in post content are auto-embedded</li>
 
   <li><b>date_format</b> - use a custom format when displaying <i>field="date"</i>, <i>"modified", or a custom field</i></li>
