--- a/includes/docs/html/comment.html
+++ b/includes/docs/html/comment.html
@@ -29,15 +29,18 @@ Inside the comments loop, use <b>[comment]</b> to display the following fields.
 	<li><b>content</b> - comment content; default if not parameter is specified</li>
 	<li><b>date</b> - date of comment</li>
 </ul><ul>
-	<li><b>title</b> - title of the post where the comment is</li>
-	<li><b>url</b> - URL of the post</li>
-	<li><b>title-link</b> - post title with link to the post</li>
+  <li><b>url</b> - URL of the comment</li>
+  <li><b>link</b> - the post title linked to the comment</li>
+  <li><b>post-url</b> - URL of the post where the comment is</li>
+  <li><b>title</b> - title of the post where the comment is</li>
+	<li><b>title-link</b> - post title with link to the post itself</li>
 </ul><ul>
 	<li><b>author</b> - author name</li>
 	<li><b>author-url</b> - author URL</li>
 	<li><b>author-link</b> - author name with link to URL; if no URL, then displays just name</li>
   <li><b>avatar</b> - author avatar image; optional <i>size</i> parameter (default 96, max 512)</li>
 </ul><ul>
+  <li><b>count</b> - number of comments the post has</li>
   <li><b>counted</b> - shows "No comments", "1 comment" or "X comments"</li>
 	<li><b>total</b> - total comment count; use after the loop is finished</li>
 </ul>
