--- a/includes/docs/html/comment.html
+++ b/includes/docs/html/comment.html
@@ -18,7 +18,6 @@ Available parameters for the <b>[comments] </b>shortcode are:
 	<li><b>id</b> - set to <i>this</i> to display comments from the current post only</li>
 	<li><b>format</b> - set to <i>false</i> to prevent formatting comment content</li>
 	<li><b>words/length</b> - trim by number of words or characters (for comment content or post title)</li>
-	<li><b>date_format</b> - format the comment date, e.g., "Y-m-d". <a href="http://codex.wordpress.org/Formatting_Date_and_Time" target="_blank">Codex: Formatting Date and Time</a></li>
 </ul><br>
 <hr>
 <h3>Comment fields</h3>
@@ -27,7 +26,8 @@ Inside the comments loop, use <b>[comment]</b> to display the following fields.
 
 <ul>
 	<li><b>content</b> - comment content; default if not parameter is specified</li>
-	<li><b>date</b> - date of comment</li>
+  <li><b>date</b> - date of comment</li>
+  <li><b>date_format</b> - format the comment date, e.g., "Y-m-d". For syntax: <a href="http://codex.wordpress.org/Formatting_Date_and_Time" target="_blank">Formatting Date and Time</a></li>
 </ul><ul>
   <li><b>url</b> - URL of the comment</li>
   <li><b>link</b> - the post title linked to the comment</li>
