--- a/includes/docs/html/if.html
+++ b/includes/docs/html/if.html
@@ -39,6 +39,11 @@ Use the <b>[if]</b> shortcode to display content based on certain conditions.
   <li><b>lowercase</b> - set to <i>true</i> to compare lowercased version of field value</li>
   <li><b>empty</b> - set to <i>false</i> if you're using dynamic values which could be empty, for example, when using [pass]</li>
 </ul>
+<h4>Date field</h4>
+<ul>
+  <li><b>before</b>/<b>after</b> - used in place of <i>value</i> and <i>compare</i>; query for field values before/after a relative or specific date: <i>10 days</i>, <i>2 weeks ago</i>, or <i>2015-02-01</i></li>
+</ul>
+
 <h4>User field</h4>
 <ul>
 	<li><b>user_field</b> - name of user field to query</li>
