--- a/includes/docs/html/attach.html
+++ b/includes/docs/html/attach.html
@@ -38,6 +38,9 @@ The following fields are available for each attachment.
 	<li><b>size</b> - image size: <i>thumbnail</i>, <i>medium</i>, <i>large</i>, <i>full</i> (default) or custom defined size</li>
 	<li><b>thumbnail</b> - thumbnail</li>
 	<li><b>thumbnail-url</b> - thumbnail URL</li>
+</ul><ul>
+  <li><b>title-link</b> - attachment title linked to file</li>
+  <li><b>title-link-out</b> - attachment title linked to file in new tab</li>
 </ul><br>
 <hr>
 
