--- a/includes/docs/html/block.html
+++ b/includes/docs/html/block.html
@@ -6,9 +6,7 @@ Block shortcodes can be used as placeholders for HTML tags in the post.
 
 The advantage is that the tags will be visible and protected in the post editor in Visual mode.
 
-You can enable this module under <a href="options-general.php?page=ccs_reference&tab=settings">Settings</a>.
-
-Thanks to @szepeviktor for suggesting this feature. 
+You can enable this module under <a href="options-general.php?page=ccs_reference&tab=settings">Settings</a>. Thanks to @szepeviktor for suggesting this feature. 
 
 <hr>
 
